class.newInstance is deprecated #2435
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>