@@ -93,7 +93,8 @@ public class JSTLBundleDiscoverer implements TldBundleDiscoverer
               // Class.getForName("org.apache.jasper.runtime.JspFactoryImpl")
               // however its bundles does not import the jasper package
               // so it fails. let's help things out:
-                fact = (JspFactory) JettyBootstrapActivator.class.getClassLoader().loadClass(DEFAULT_JSP_FACTORY_IMPL_CLASS).newInstance();
+                fact = (JspFactory) JettyBootstrapActivator.class.getClassLoader()
+                    .loadClass(DEFAULT_JSP_FACTORY_IMPL_CLASS).getDeclaredConstructor().newInstance();
                 JspFactory.setDefaultFactory(fact);
             }
 
