@@ -38,7 +38,8 @@ public class JSONCollectionConvertor implements JSON.Convertor
     {
         try
         {
-            Collection result = (Collection)Loader.loadClass((String)object.get("class")).newInstance();
+            Collection result = (Collection)Loader.loadClass((String)object.get("class"))
+                .getDeclaredConstructor().newInstance();
             Collections.addAll(result, (Object[])object.get("list"));
             return result;
         }
